--- a/album.html
+++ b/album.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Professional and research activities of Musfiqur Rahman, including field investigations, conferences, workshops, academic engagement, and service." />
+  <meta name="description" content="Professional and research activities of Musfiqur Rahman, including fieldwork and monitoring, conferences, workshops, academic engagement, and outreach/service." />
 
   <title>Professional Activities | Musfiqur Rahman</title>
   <link rel="stylesheet" href="style.css" />
@@ -97,7 +97,7 @@
       display: block;
     }
 
-    /* ✨ Fade-in animation when switching tabs */
+    /* Fade-in when switching tabs */
     .tabpanel.fade-in{
       animation: fadeInUp 220ms ease-out;
     }
@@ -214,7 +214,7 @@
       line-height: 1.35;
     }
 
-    /* ✅ Click-to-zoom modal */
+    /* Click-to-zoom modal */
     .modal{
       position: fixed;
       inset: 0;
@@ -311,16 +311,15 @@
   <section class="album-hero">
     <h1>Professional &amp; Research Activities</h1>
     <p class="album-intro">
-      Selected professional and research-related activities, including field investigations, conference participation,
-      workshops, academic engagement, and service/volunteering.
+      Selected professional and research-related activities, including fieldwork and monitoring, conference participation,
+      workshops and training, academic and lab engagement, and outreach/service.
     </p>
   </section>
 
-  <!-- Tabs -->
   <section class="tabs" aria-label="Activity categories">
     <div class="tablist" role="tablist" aria-label="Activity tabs">
       <button class="tab-btn" role="tab" id="tab-field" aria-controls="panel-field" aria-selected="true" type="button">
-        Field Investigations
+        Fieldwork &amp; Monitoring
       </button>
       <button class="tab-btn" role="tab" id="tab-conf" aria-controls="panel-conf" aria-selected="false" type="button">
         Conferences &amp; Presentations
@@ -329,10 +328,10 @@
         Workshops &amp; Training
       </button>
       <button class="tab-btn" role="tab" id="tab-acad" aria-controls="panel-acad" aria-selected="false" type="button">
-        Academic Engagement
+        Academic &amp; Lab Engagement
       </button>
       <button class="tab-btn" role="tab" id="tab-service" aria-controls="panel-service" aria-selected="false" type="button">
-        Service &amp; Volunteering
+        Outreach &amp; Service
       </button>
     </div>
 
@@ -340,31 +339,23 @@
     <div class="tabpanel active fade-in" role="tabpanel" id="panel-field" aria-labelledby="tab-field">
       <div class="panel-grid">
         <div class="panel-text">
-          <h2>Field Investigations</h2>
+          <h2>Fieldwork &amp; Monitoring</h2>
           <p>
             Field-based work supporting urban stormwater research, including monitoring visits, site inspections,
             and data collection that inform hydrologic and infrastructure performance analyses.
           </p>
 
-          <div class="gallery" aria-label="Field investigations gallery">
+          <div class="gallery" aria-label="Fieldwork gallery">
             <figure>
               <a href="#" class="zoom"
                  data-full="images/album/field_1.jpg"
-                 data-caption="Field investigation — GSI site monitoring (Location / Date)">
-                <img src="images/album/field_1.jpg" alt="Field investigation activity"
+                 data-caption="Rain garden monitoring — Villanova University (Oct 2024)">
+                <img src="images/album/field_1.jpg" alt="Fieldwork activity"
                      loading="lazy" decoding="async" />
               </a>
-              <figcaption class="img-cap">Field investigation — GSI site monitoring (Location / Date)</figcaption>
+              <figcaption class="img-cap">Rain garden monitoring — Villanova University (Oct 2024)</figcaption>
             </figure>
-
-            <!-- Add more images like this:
-            <figure>
-              <a href="#" class="zoom" data-full="images/album/field_2.jpg" data-caption="Caption here">
-                <img src="images/album/field_2.jpg" alt="Field investigation" loading="lazy" decoding="async" />
-              </a>
-              <figcaption class="img-cap">Caption here</figcaption>
-            </figure>
-            -->
+            <!-- Add more <figure> blocks here -->
           </div>
         </div>
 
@@ -372,13 +363,11 @@
           <figure>
             <a href="#" class="zoom"
                data-full="images/album/field_cover.jpg"
-               data-caption="Field investigations — representative cover photo (Location / Date)">
-              <img src="images/album/field_cover.jpg" alt="Field investigations cover image"
+               data-caption="Fieldwork & monitoring — representative cover photo (Location / Date)">
+              <img src="images/album/field_cover.jpg" alt="Fieldwork cover image"
                    loading="lazy" decoding="async" />
             </a>
-            <figcaption>
-              Field investigations — representative cover photo (Location / Date)
-            </figcaption>
+            <figcaption>Fieldwork &amp; monitoring — representative cover photo (Location / Date)</figcaption>
           </figure>
         </div>
       </div>
@@ -394,16 +383,17 @@
             and professional networking related to stormwater management, urban hydrology, and environmental data science.
           </p>
 
-          <div class="gallery" aria-label="Conferences gallery">
+          <div class="gallery" aria-label="Conference gallery">
             <figure>
               <a href="#" class="zoom"
                  data-full="images/album/conference_1.jpg"
                  data-caption="AGU Fall Meeting — New Orleans, LA (Dec 2025)">
-                <img src="images/album/conference_1.jpg" alt="Conference or presentation activity"
+                <img src="images/album/conference_1.jpg" alt="Conference or presentation"
                      loading="lazy" decoding="async" />
               </a>
               <figcaption class="img-cap">AGU Fall Meeting — New Orleans, LA (Dec 2025)</figcaption>
             </figure>
+            <!-- Add more <figure> blocks here -->
           </div>
         </div>
 
@@ -411,13 +401,11 @@
           <figure>
             <a href="#" class="zoom"
                data-full="images/album/conference_cover.jpg"
-               data-caption="Conference cover — presentation or poster snapshot (Conference / Location / Date)">
-              <img src="images/album/conference_cover.jpg" alt="Conferences cover image"
+               data-caption="Conference cover — presentation/poster snapshot (Conference / Location / Date)">
+              <img src="images/album/conference_cover.jpg" alt="Conference cover image"
                    loading="lazy" decoding="async" />
             </a>
-            <figcaption>
-              Conference cover — presentation or poster snapshot (Conference / Location / Date)
-            </figcaption>
+            <figcaption>Conference cover — presentation/poster snapshot (Conference / Location / Date)</figcaption>
           </figure>
         </div>
       </div>
@@ -429,20 +417,21 @@
         <div class="panel-text">
           <h2>Workshops &amp; Training</h2>
           <p>
-            Selected workshops, short courses, and collaborative trainings that strengthen technical skills in modeling,
-            data analytics, and applied research workflows.
+            Selected workshops, short courses, and trainings that strengthen technical skills in modeling,
+            geospatial analysis, data analytics, and applied research workflows.
           </p>
 
           <div class="gallery" aria-label="Workshops gallery">
             <figure>
               <a href="#" class="zoom"
                  data-full="images/album/workshop_1.jpg"
-                 data-caption="Workshop / Short course — Topic (Location / Date)">
-                <img src="images/album/workshop_1.jpg" alt="Workshop or training activity"
+                 data-caption="Technical workshop — Topic (Location / Date)">
+                <img src="images/album/workshop_1.jpg" alt="Workshop or training"
                      loading="lazy" decoding="async" />
               </a>
-              <figcaption class="img-cap">Workshop / Short course — Topic (Location / Date)</figcaption>
+              <figcaption class="img-cap">Technical workshop — Topic (Location / Date)</figcaption>
             </figure>
+            <!-- Add more <figure> blocks here -->
           </div>
         </div>
 
@@ -451,12 +440,10 @@
             <a href="#" class="zoom"
                data-full="images/album/workshop_cover.jpg"
                data-caption="Workshop cover — training snapshot (Organization / Location / Date)">
-              <img src="images/album/workshop_cover.jpg" alt="Workshops cover image"
+              <img src="images/album/workshop_cover.jpg" alt="Workshop cover image"
                    loading="lazy" decoding="async" />
             </a>
-            <figcaption>
-              Workshop cover — training snapshot (Organization / Location / Date)
-            </figcaption>
+            <figcaption>Workshop cover — training snapshot (Organization / Location / Date)</figcaption>
           </figure>
         </div>
       </div>
@@ -466,22 +453,23 @@
     <div class="tabpanel" role="tabpanel" id="panel-acad" aria-labelledby="tab-acad">
       <div class="panel-grid">
         <div class="panel-text">
-          <h2>Academic Engagement</h2>
+          <h2>Academic &amp; Lab Engagement</h2>
           <p>
-            Activities beyond coursework, including research group participation, interdisciplinary collaboration,
-            departmental events, mentoring, and academic service supporting a vibrant research community.
+            Engagement beyond coursework, including research group activities, lab meetings (e.g., VCRWS),
+            interdisciplinary collaboration, symposium participation, and departmental events.
           </p>
 
           <div class="gallery" aria-label="Academic engagement gallery">
             <figure>
               <a href="#" class="zoom"
                  data-full="images/album/academic_1.jpg"
-                 data-caption="Research group / academic event — Villanova University (Location / Date)">
-                <img src="images/album/academic_1.jpg" alt="Academic engagement activity"
+                 data-caption="VCRWS internal meeting — Villanova University (Month Year)">
+                <img src="images/album/academic_1.jpg" alt="Academic or lab engagement"
                      loading="lazy" decoding="async" />
               </a>
-              <figcaption class="img-cap">Research group / academic event — Villanova University (Location / Date)</figcaption>
+              <figcaption class="img-cap">VCRWS internal meeting — Villanova University (Month Year)</figcaption>
             </figure>
+            <!-- Add more <figure> blocks here -->
           </div>
         </div>
 
@@ -489,13 +477,11 @@
           <figure>
             <a href="#" class="zoom"
                data-full="images/album/academic_cover.jpg"
-               data-caption="Academic engagement cover — meeting or event snapshot (Location / Date)">
+               data-caption="Academic engagement cover — meeting/symposium snapshot (Location / Date)">
               <img src="images/album/academic_cover.jpg" alt="Academic engagement cover image"
                    loading="lazy" decoding="async" />
             </a>
-            <figcaption>
-              Academic engagement cover — meeting or event snapshot (Location / Date)
-            </figcaption>
+            <figcaption>Academic engagement cover — meeting/symposium snapshot (Location / Date)</figcaption>
           </figure>
         </div>
       </div>
@@ -505,22 +491,23 @@
     <div class="tabpanel" role="tabpanel" id="panel-service" aria-labelledby="tab-service">
       <div class="panel-grid">
         <div class="panel-text">
-          <h2>Service &amp; Volunteering</h2>
+          <h2>Outreach &amp; Service</h2>
           <p>
-            Community service and volunteering activities, including outreach, event support, and professional society
-            contributions that strengthen collaboration and public engagement in science and engineering.
+            Outreach, volunteering, and service activities—including community events and academic support—that strengthen
+            collaboration and public engagement in science and engineering.
           </p>
 
-          <div class="gallery" aria-label="Service gallery">
+          <div class="gallery" aria-label="Outreach and service gallery">
             <figure>
               <a href="#" class="zoom"
                  data-full="images/album/service_1.jpg"
-                 data-caption="Volunteer activity — Event support / outreach (Location / Date)">
-                <img src="images/album/service_1.jpg" alt="Service or volunteering activity"
+                 data-caption="Day of Service — Villanova University (Apr 2025)">
+                <img src="images/album/service_1.jpg" alt="Outreach or service activity"
                      loading="lazy" decoding="async" />
               </a>
-              <figcaption class="img-cap">Volunteer activity — Event support / outreach (Location / Date)</figcaption>
+              <figcaption class="img-cap">Day of Service — Villanova University (Apr 2025)</figcaption>
             </figure>
+            <!-- Add more <figure> blocks here -->
           </div>
         </div>
 
@@ -528,13 +515,11 @@
           <figure>
             <a href="#" class="zoom"
                data-full="images/album/service_cover.jpg"
-               data-caption="Service cover — volunteering snapshot (Organization / Location / Date)">
-              <img src="images/album/service_cover.jpg" alt="Service cover image"
+               data-caption="Outreach & service cover — representative photo (Location / Date)">
+              <img src="images/album/service_cover.jpg" alt="Outreach and service cover image"
                    loading="lazy" decoding="async" />
             </a>
-            <figcaption>
-              Service cover — volunteering snapshot (Organization / Location / Date)
-            </figcaption>
+            <figcaption>Outreach &amp; service cover — representative photo (Location / Date)</figcaption>
           </figure>
         </div>
       </div>
@@ -545,7 +530,7 @@
 
 <div class="footer">© Musfiqur Rahman</div>
 
-<!-- ✅ Modal HTML (click-to-zoom) -->
+<!-- Modal -->
 <div class="modal" id="imgModal" aria-hidden="true" role="dialog" aria-label="Image preview">
   <div class="modal-content">
     <div class="modal-card">
@@ -559,9 +544,7 @@
 </div>
 
 <script>
-  // ---------------------------
-  // Accessible Tabs + Fade-in
-  // ---------------------------
+  // Tabs + fade
   const tabs = Array.from(document.querySelectorAll('.tab-btn'));
   const panels = Array.from(document.querySelectorAll('.tabpanel'));
 
@@ -574,9 +557,8 @@
       const isTarget = p.id === targetId;
       p.classList.toggle('active', isTarget);
       if (isTarget) {
-        // retrigger animation
         p.classList.remove('fade-in');
-        void p.offsetWidth;
+        void p.offsetWidth; // retrigger animation
         p.classList.add('fade-in');
       }
     });
@@ -586,29 +568,17 @@
     tab.addEventListener('click', () => activateTab(tab));
     tab.addEventListener('keydown', (e) => {
       const idx = tabs.indexOf(tab);
-      if (e.key === 'ArrowRight') {
-        e.preventDefault();
-        tabs[(idx + 1) % tabs.length].focus();
-      }
-      if (e.key === 'ArrowLeft') {
-        e.preventDefault();
-        tabs[(idx - 1 + tabs.length) % tabs.length].focus();
-      }
-      if (e.key === 'Enter' || e.key === ' ') {
-        e.preventDefault();
-        activateTab(tab);
-      }
+      if (e.key === 'ArrowRight') { e.preventDefault(); tabs[(idx + 1) % tabs.length].focus(); }
+      if (e.key === 'ArrowLeft') { e.preventDefault(); tabs[(idx - 1 + tabs.length) % tabs.length].focus(); }
+      if (e.key === 'Enter' || e.key === ' ') { e.preventDefault(); activateTab(tab); }
     });
   });
 
-  // ---------------------------
-  // Click-to-zoom Modal
-  // ---------------------------
+  // Modal
   const modal = document.getElementById('imgModal');
   const modalImg = document.getElementById('modalImg');
   const modalCaption = document.getElementById('modalCaption');
   const modalClose = document.getElementById('modalClose');
-
   let lastFocusedEl = null;
 
   function openModal(fullSrc, caption, altText) {
@@ -630,30 +600,22 @@
     document.body.style.overflow = '';
     modalImg.src = '';
     modalCaption.textContent = '';
-
     if (lastFocusedEl) lastFocusedEl.focus();
   }
 
-  // Attach to all zoom links
   document.querySelectorAll('a.zoom').forEach(a => {
     a.addEventListener('click', (e) => {
       e.preventDefault();
-      const fullSrc = a.getAttribute('data-full');
-      const caption = a.getAttribute('data-caption');
-      const img = a.querySelector('img');
-      const altText = img ? img.alt : 'Image preview';
-      openModal(fullSrc, caption, altText);
+      openModal(
+        a.getAttribute('data-full'),
+        a.getAttribute('data-caption'),
+        (a.querySelector('img') || {}).alt
+      );
     });
   });
 
-  // Close actions
   modalClose.addEventListener('click', closeModal);
-
-  modal.addEventListener('click', (e) => {
-    // click outside the card closes
-    if (e.target === modal) closeModal();
-  });
-
+  modal.addEventListener('click', (e) => { if (e.target === modal) closeModal(); });
   document.addEventListener('keydown', (e) => {
     if (e.key === 'Escape' && modal.classList.contains('open')) closeModal();
   });
