--- a/album.html
+++ b/album.html
@@ -363,7 +363,7 @@
           <figure>
             <a href="#" class="zoom"
                data-full="images/album/field_cover.jpg"
-               data-caption="Fieldwork & monitoring — representative cover photo (Location / Date)">
+               data-caption="Rain garden in dry weather">
               <img src="images/album/field_cover.jpg" alt="Fieldwork cover image"
                    loading="lazy" decoding="async" />
             </a>
@@ -401,11 +401,11 @@
           <figure>
             <a href="#" class="zoom"
                data-full="images/album/conference_cover.jpg"
-               data-caption="Conference cover — presentation/poster snapshot (Conference / Location / Date)">
+               data-caption="AGU 2025">
               <img src="images/album/conference_cover.jpg" alt="Conference cover image"
                    loading="lazy" decoding="async" />
             </a>
-            <figcaption>Conference cover — presentation/poster snapshot (Conference / Location / Date)</figcaption>
+            <figcaption>AGU 2025</figcaption>
           </figure>
         </div>
       </div>
@@ -425,11 +425,11 @@
             <figure>
               <a href="#" class="zoom"
                  data-full="images/album/workshop_1.jpg"
-                 data-caption="Technical workshop — Topic (Location / Date)">
+                 data-caption="Technical workshop">
                 <img src="images/album/workshop_1.jpg" alt="Workshop or training"
                      loading="lazy" decoding="async" />
               </a>
-              <figcaption class="img-cap">Technical workshop — Topic (Location / Date)</figcaption>
+              <figcaption class="img-cap">Technical workshop</figcaption>
             </figure>
             <!-- Add more <figure> blocks here -->
           </div>
@@ -439,11 +439,11 @@
           <figure>
             <a href="#" class="zoom"
                data-full="images/album/workshop_cover.jpg"
-               data-caption="Workshop cover — training snapshot (Organization / Location / Date)">
+               data-caption="Workshop/Symposium">
               <img src="images/album/workshop_cover.jpg" alt="Workshop cover image"
                    loading="lazy" decoding="async" />
             </a>
-            <figcaption>Workshop cover — training snapshot (Organization / Location / Date)</figcaption>
+            <figcaption>Workshop/Symposium</figcaption>
           </figure>
         </div>
       </div>
@@ -463,11 +463,11 @@
             <figure>
               <a href="#" class="zoom"
                  data-full="images/album/academic_1.jpg"
-                 data-caption="VCRWS internal meeting — Villanova University (Month Year)">
+                 data-caption="VCRWS — Villanova University (Month Year)">
                 <img src="images/album/academic_1.jpg" alt="Academic or lab engagement"
                      loading="lazy" decoding="async" />
               </a>
-              <figcaption class="img-cap">VCRWS internal meeting — Villanova University (Month Year)</figcaption>
+              <figcaption class="img-cap">VCRWS PhD Defense</figcaption>
             </figure>
             <!-- Add more <figure> blocks here -->
           </div>
@@ -477,11 +477,11 @@
           <figure>
             <a href="#" class="zoom"
                data-full="images/album/academic_cover.jpg"
-               data-caption="Academic engagement cover — meeting/symposium snapshot (Location / Date)">
+               data-caption="Villanova Symposium">
               <img src="images/album/academic_cover.jpg" alt="Academic engagement cover image"
                    loading="lazy" decoding="async" />
             </a>
-            <figcaption>Academic engagement cover — meeting/symposium snapshot (Location / Date)</figcaption>
+            <figcaption>Villanova Symposium</figcaption>
           </figure>
         </div>
       </div>
@@ -515,11 +515,11 @@
           <figure>
             <a href="#" class="zoom"
                data-full="images/album/service_cover.jpg"
-               data-caption="Outreach & service cover — representative photo (Location / Date)">
+               data-caption="Outreach & service">
               <img src="images/album/service_cover.jpg" alt="Outreach and service cover image"
                    loading="lazy" decoding="async" />
             </a>
-            <figcaption>Outreach &amp; service cover — representative photo (Location / Date)</figcaption>
+            <figcaption>Outreach &amp; service cover — Day of Service 2024</figcaption>
           </figure>
         </div>
       </div>
