--- a/album.html
+++ b/album.html
@@ -393,6 +393,32 @@
               </a>
               <figcaption class="img-cap">AGU Fall Meeting — New Orleans, LA (Dec 2025)</figcaption>
             </figure>
+            <figure>
+  <a href="#" class="zoom"
+     data-full="images/album/conference_2.jpg"
+     data-caption="EWRI Congress — Alaska, USA (2025)">
+    <img src="images/album/conference_2.jpg"
+         alt="EWRI Congress 2025 participation"
+         loading="lazy" decoding="async" />
+  </a>
+  <figcaption class="img-cap">
+    EWRI Congress — Alaska, USA (2025)
+  </figcaption>
+</figure>
+
+<figure>
+  <a href="#" class="zoom"
+     data-full="images/album/conference_3.jpg"
+     data-caption="EWRI technical sessions and professional engagement — Alaska (2025)">
+    <img src="images/album/conference_3.jpg"
+         alt="EWRI 2025 technical sessions"
+         loading="lazy" decoding="async" />
+  </a>
+  <figcaption class="img-cap">
+    EWRI technical sessions and professional engagement — Alaska (2025)
+  </figcaption>
+</figure>
+
             <!-- Add more <figure> blocks here -->
           </div>
         </div>
