--- a/index.html
+++ b/index.html
@@ -3,125 +3,199 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="Musfiqur Rahman — PhD Researcher working on AI/ML for stormwater and Green Stormwater Infrastructure (GSI) performance, forecasting, and urban flood resilience." />
   <title>Musfiqur Rahman | PhD Researcher</title>
   <link rel="stylesheet" href="style.css">
 
   <style>
-    /* Page layout helpers (works even if style.css is minimal) */
+    /* Page layout helpers */
     .container {
       max-width: 980px;
       margin: 0 auto;
-      padding: 30px 18px;
+      padding: 26px 18px;
     }
 
-    .hero {
-      display: grid;
-      grid-template-columns: 1.2fr 0.8fr;
-      gap: 28px;
-      align-items: center;
+    /* ===== HERO BACKGROUND BANNER (NEW) ===== */
+    .hero-banner{
+      position: relative;
+      border-radius: 18px;
+      overflow: hidden;
+      border: 1px solid #e9e9e9;
+      box-shadow: 0 10px 28px rgba(0,0,0,0.10);
       margin-top: 10px;
+      min-height: 330px;
+      display: grid;
+      align-items: stretch;
     }
 
-    @media (max-width: 800px) {
-      .hero { grid-template-columns: 1fr; }
-      .hero-right { order: -1; }
+    .hero-banner::before{
+      content:"";
+      position:absolute;
+      inset:0;
+      /* ✅ Change extension if needed: .jpg or .png */
+      background-image: url("images/hero_flood_gsi.png");
+      background-size: cover;
+      background-position: center;
+      transform: scale(1.02);
     }
 
-    .hero h1 {
+    /* Dark overlay for readable text */
+    .hero-banner::after{
+      content:"";
+      position:absolute;
+      inset:0;
+      background: linear-gradient(
+        90deg,
+        rgba(0,0,0,0.62) 0%,
+        rgba(0,0,0,0.46) 52%,
+        rgba(0,0,0,0.18) 100%
+      );
+    }
+
+    .hero-inner{
+      position: relative;
+      z-index: 2;
+      padding: 22px;
+      display: grid;
+      grid-template-columns: 1.25fr 0.75fr;
+      gap: 22px;
+      align-items: center;
+    }
+
+    @media (max-width: 800px){
+      .hero-inner{ grid-template-columns: 1fr; }
+      .hero-right{ order: -1; }
+      .hero-banner::after{
+        background: linear-gradient(
+          180deg,
+          rgba(0,0,0,0.58) 0%,
+          rgba(0,0,0,0.48) 55%,
+          rgba(0,0,0,0.38) 100%
+        );
+      }
+    }
+
+    .hero-left h1{
       margin: 0 0 8px;
       font-size: 34px;
       letter-spacing: 0.2px;
+      color: #fff;
+      line-height: 1.12;
+      text-shadow: 0 6px 18px rgba(0,0,0,0.25);
     }
 
-    .subtitle {
+    .subtitle{
       margin: 0 0 14px;
       font-size: 16px;
-      color: #444;
-      line-height: 1.4;
+      color: rgba(255,255,255,0.92);
+      line-height: 1.45;
+      max-width: 70ch;
     }
 
-    .lead {
+    .lead{
       margin: 0 0 18px;
       font-size: 16px;
-      color: #333;
+      color: rgba(255,255,255,0.92);
       line-height: 1.7;
+      max-width: 78ch;
     }
 
-    .hero-actions {
+    .hero-actions{
       display: flex;
       flex-wrap: wrap;
       gap: 10px;
-      margin-top: 14px;
+      margin-top: 10px;
     }
 
-    .btn {
+    /* Buttons (slightly premium, but compatible with your current style) */
+    .btn{
       display: inline-block;
       padding: 10px 14px;
-      border: 1px solid #ccc;
-      border-radius: 10px;
+      border: 1px solid rgba(255,255,255,0.35);
+      border-radius: 12px;
       text-decoration: none;
-      color: #111;
-      background: #fafafa;
-      font-size: 14px;
-    }
-
-    .btn:hover { background: #f2f2f2; }
-
-    .btn.primary {
-      border-color: #111;
-      background: #111;
       color: #fff;
+      background: rgba(255,255,255,0.10);
+      font-size: 14px;
+      font-weight: 700;
+      backdrop-filter: blur(6px);
+      transition: transform 0.15s ease, box-shadow 0.15s ease, background 0.15s ease;
     }
 
-    .btn.primary:hover { background: #222; }
+    .btn:hover{
+      background: rgba(255,255,255,0.16);
+      transform: translateY(-1px);
+      box-shadow: 0 10px 22px rgba(0,0,0,0.14);
+    }
 
-    .hero-right { text-align: center; }
+    .btn.primary{
+      border-color: rgba(11,94,215,0.9);
+      background: rgba(11,94,215,0.95);
+    }
 
-    .profile-pic {
+    .btn.primary:hover{
+      background: rgba(8,75,176,0.95);
+    }
+
+    @media (max-width: 480px){
+      .hero-actions a{ width: 100%; text-align: center; }
+    }
+
+    /* Profile area inside hero */
+    .hero-right{
+      text-align: center;
+    }
+
+    .profile-pic{
       width: 210px;
       height: 210px;
       object-fit: cover;
       border-radius: 18px;
-      border: 1px solid #ddd;
-      background: #f7f7f7;
+      border: 1px solid rgba(255,255,255,0.35);
+      background: rgba(255,255,255,0.10);
+      box-shadow: 0 10px 24px rgba(0,0,0,0.22);
     }
 
-    .affil {
+    .affil{
       margin-top: 10px;
       font-size: 13px;
-      color: #555;
+      color: rgba(255,255,255,0.90);
       line-height: 1.4;
+      text-shadow: 0 6px 18px rgba(0,0,0,0.18);
     }
 
-    .section { margin-top: 34px; }
+    /* Sections */
+    .section{ margin-top: 34px; }
 
-    .section h2 {
+    .section h2{
       margin: 0 0 12px;
       font-size: 20px;
       border-bottom: 2px solid #e2e2e2;
       padding-bottom: 6px;
+      color: #003366;
     }
 
-    .impact-box {
+    .impact-box{
       border: 1px solid #ddd;
       background: #fbfbfb;
       border-radius: 14px;
       padding: 16px 16px 10px;
     }
 
-    .impact-box ul {
+    .impact-box ul{
       margin: 10px 0 0;
       padding-left: 18px;
     }
 
-    .impact-box li {
-      margin-bottom: 8px;
-      line-height: 1.5;
+    .impact-box li{
+      margin-bottom: 10px;
+      line-height: 1.55;
       color: #333;
       font-size: 15px;
     }
 
-    .cta {
+    /* CTA */
+    .cta{
       margin-top: 30px;
       padding: 16px;
       border: 1px solid #ddd;
@@ -134,31 +208,20 @@
       flex-wrap: wrap;
     }
 
-    .cta p {
+    .cta p{
       margin: 0;
       color: #333;
       line-height: 1.6;
     }
 
-    @media (max-width: 480px) {
-      .cta p {
-        font-size: 15px;
-        line-height: 1.7;
-      }
-
-      .quick-access {
-        margin-top: 12px;
-      }
-    }
-
-    /* ===== Quick Access social icons (centered) ===== */
-    .quick-access {
+    /* Quick Access social icons (centered) */
+    .quick-access{
       margin-top: 14px;
       width: 100%;
       text-align: center;
     }
 
-    .quick-access h3 {
+    .quick-access h3{
       margin: 0 0 10px;
       font-size: 15px;
       color: #111;
@@ -166,7 +229,7 @@
       text-align: center;
     }
 
-    .social-icons {
+    .social-icons{
       display: flex;
       flex-wrap: wrap;
       gap: 20px;
@@ -174,7 +237,7 @@
       justify-content: center;
     }
 
-    .social-icons a {
+    .social-icons a{
       text-decoration: none !important;
       border-bottom: none !important;
       display: inline-flex;
@@ -184,7 +247,7 @@
       border-radius: 10px;
     }
 
-    .social-icons img {
+    .social-icons img{
       width: 56px;
       height: 56px;
       object-fit: contain;
@@ -194,48 +257,23 @@
       display: block;
     }
 
-    .social-icons a:hover img {
+    .social-icons a:hover img{
       filter: grayscale(0%);
       opacity: 1;
       transform: translateY(-5px);
     }
 
-    /* ===== Mobile optimization ===== */
-    @media (max-width: 480px) {
-
-      /* Slightly smaller icons on phones */
-      .social-icons img {
-        width: 46px;
-        height: 46px;
-      }
-
-      .social-icons {
-        gap: 14px;
-      }
-
-      /* Stack CTA content and make button full-width */
-      .cta {
-        flex-direction: column;
-        align-items: stretch;
-      }
-
-      .cta .btn.primary {
-        width: 100%;
-        text-align: center;
-      }
+    /* Mobile optimization */
+    @media (max-width: 480px){
+      .social-icons img{ width: 46px; height: 46px; }
+      .social-icons{ gap: 14px; }
+      .cta{ flex-direction: column; align-items: stretch; }
+      /* CTA button uses site button style from style.css (blue) */
+      .cta .btn.primary{ width: 100%; text-align: center; }
     }
 
-    @media (max-width: 480px) {
-      .hero-actions a {
-        width: 100%;
-        text-align: center;
-      }
-    }
-
-    @media (max-width: 480px) {
-      .social-icons a {
-        padding: 10px; /* increases tap target */
-      }
+    @media (max-width: 480px){
+      .social-icons a{ padding: 10px; }
     }
   </style>
 </head>
@@ -257,32 +295,34 @@
 
 <div class="container">
 
-  <!-- HERO -->
-  <section class="hero">
-    <div class="hero-left">
-      <h1>Musfiqur Rahman</h1>
-      <p class="subtitle">
-        PhD Researcher | AI/ML for Stormwater &amp; Green Stormwater Infrastructure (GSI) Performance | Villanova University
-      </p>
+  <!-- HERO (UPDATED: background image banner) -->
+  <section class="hero-banner" aria-label="Hero section">
+    <div class="hero-inner">
+      <div class="hero-left">
+        <h1>Musfiqur Rahman</h1>
+        <p class="subtitle">
+          PhD Researcher | AI/ML for Stormwater &amp; Green Stormwater Infrastructure (GSI) Performance | Villanova University
+        </p>
 
-      <p class="lead">
-        I develop data-driven methods to evaluate and forecast green stormwater infrastructure performance by integrating
-        monitoring data, hydrologic modeling, and machine learning. My work supports risk-informed maintenance and planning
-        to improve urban flood resilience and water quality.
-      </p>
+        <p class="lead">
+          I develop data-driven methods to evaluate and forecast green stormwater infrastructure performance by integrating
+          monitoring data, hydrologic modeling, and machine learning. My work supports risk-informed maintenance and planning
+          to improve urban flood resilience and water quality.
+        </p>
 
-      <div class="hero-actions">
-        <a class="btn primary" href="contact.html">Contact</a>
-        <a class="btn" href="publications.html">Publications</a>
-        <a class="btn" href="projects.html">Projects</a>
+        <div class="hero-actions">
+          <a class="btn primary" href="contact.html">Contact</a>
+          <a class="btn" href="publications.html">Publications</a>
+          <a class="btn" href="projects.html">Projects</a>
+        </div>
       </div>
-    </div>
 
-    <div class="hero-right">
-      <img class="profile-pic" src="profile.jpg" alt="Musfiqur Rahman portrait">
-      <div class="affil">
-        Civil &amp; Environmental Engineering<br>
-        Villanova University • Pennsylvania, USA
+      <div class="hero-right">
+        <img class="profile-pic" src="profile.jpg" alt="Musfiqur Rahman portrait" loading="lazy" decoding="async">
+        <div class="affil">
+          Civil &amp; Environmental Engineering<br>
+          Villanova University • Pennsylvania, USA
+        </div>
       </div>
     </div>
   </section>
@@ -291,29 +331,28 @@
   <section class="section">
     <h2>Impact &amp; Relevance</h2>
     <div class="impact-box">
-<ul>
-  <li>
-    <strong>Urban flood resilience (U.S.-focused, globally informed):</strong>
-    Develops data-driven frameworks to support proactive screening, maintenance prioritization, and performance forecasting
-    for stormwater and green stormwater infrastructure (GSI) systems in U.S. cities, informed by applied experience in
-    flood-prone urban environments.
-  </li>
+      <ul>
+        <li>
+          <strong>Urban flood resilience (U.S.-focused, globally informed):</strong>
+          Develops data-driven frameworks to support proactive screening, maintenance prioritization, and performance forecasting
+          for stormwater and green stormwater infrastructure (GSI) systems in U.S. cities, informed by applied experience in
+          flood-prone urban environments.
+        </li>
 
-  <li>
-    <strong>Decision-relevant modeling and analytics:</strong>
-    Integrates monitoring data, hydrologic and hydraulic modeling (e.g., SWMM, HEC-RAS), and machine learning to generate
-    defensible, actionable insights that support municipal stormwater planning, risk classification, and infrastructure
-    management.
-  </li>
+        <li>
+          <strong>Decision-relevant modeling and analytics:</strong>
+          Integrates monitoring data, hydrologic and hydraulic modeling (e.g., SWMM, HEC-RAS), and machine learning to generate
+          defensible, actionable insights that support municipal stormwater planning, risk classification, and infrastructure
+          management.
+        </li>
 
-  <li>
-    <strong>Scalable and transferable methods:</strong>
-    Designs approaches that generalize across municipalities by incorporating environmental context (land cover and land use)
-    and community vulnerability indicators, drawing on professional experience from large-scale government water and flood
-    management projects in Bangladesh to inform robust, real-world implementation.
-  </li>
-</ul>
-
+        <li>
+          <strong>Scalable and transferable methods:</strong>
+          Designs approaches that generalize across municipalities by incorporating environmental context (land cover and land use)
+          and community vulnerability indicators, drawing on professional experience from large-scale government water and flood
+          management projects in Bangladesh to inform robust, real-world implementation.
+        </li>
+      </ul>
     </div>
   </section>
 
@@ -329,32 +368,33 @@
         <h3>Quick Access</h3>
         <div class="social-icons">
           <a href="https://scholar.google.com/citations?user=E3F5M_8AAAAJ&hl=en" target="_blank" rel="noopener noreferrer" aria-label="Google Scholar">
-            <img src="icons/google-scholar.svg" alt="Google Scholar">
+            <img src="icons/google-scholar.svg" alt="Google Scholar" loading="lazy" decoding="async">
           </a>
 
           <a href="https://www.linkedin.com/in/musfiqur37/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
-            <img src="icons/linkedin.png" alt="LinkedIn">
+            <img src="icons/linkedin.png" alt="LinkedIn" loading="lazy" decoding="async">
           </a>
 
           <a href="https://www.researchgate.net/profile/Musfiqur-Rahman-20?ev=hdr_xprf" target="_blank" rel="noopener noreferrer" aria-label="ResearchGate">
-            <img src="icons/researchgate.svg" alt="ResearchGate">
+            <img src="icons/researchgate.svg" alt="ResearchGate" loading="lazy" decoding="async">
           </a>
 
           <a href="https://villanova.academia.edu/MusfiqurRahman" target="_blank" rel="noopener noreferrer" aria-label="Academia.edu">
-            <img src="icons/academia.svg" alt="Academia.edu">
+            <img src="icons/academia.svg" alt="Academia.edu" loading="lazy" decoding="async">
           </a>
 
           <a href="https://github.com/MusfiqurRahman" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
-            <img src="icons/github.png" alt="GitHub">
+            <img src="icons/github.png" alt="GitHub" loading="lazy" decoding="async">
           </a>
 
           <a href="https://orcid.org/0009-0002-9865-6739" target="_blank" rel="noopener noreferrer" aria-label="ORCID">
-            <img src="icons/orcid.svg" alt="ORCID">
+            <img src="icons/orcid.svg" alt="ORCID" loading="lazy" decoding="async">
           </a>
         </div>
       </div>
     </div>
 
+    <!-- CTA button uses your hero button style -->
     <a class="btn primary" href="contact.html">Get in touch</a>
   </section>
 
