--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
 
   <!-- IMPACT -->
   <section class="section">
-    <h2>Impact &amp; Relevance</h2>
+    <h2>Research Impact &amp; Applications</h2>
     <div class="impact-box">
       <ul>
         <li>
