--- a/certifications.html
+++ b/certifications.html
@@ -293,6 +293,21 @@
     <!-- LEFT -->
     <div class="cert-list">
 
+      <!-- ✅ NEW SECTION ADDED -->
+      <div class="cert-section">
+        <h2>Research Internships &amp; Academic Training</h2>
+        <ul>
+          <li>
+            <button class="cert-item" type="button"
+              data-title="Utrecht University Research Internship"
+              data-img="certificates/Utrecht_Internship.png">
+              <strong>Utrecht University — Research Internship</strong>
+              <div class="meta">Python decision-support tool for hydraulic outputs</div>
+            </button>
+          </li>
+        </ul>
+      </div>
+
       <div class="cert-section">
         <h2>Data Science & Machine Learning</h2>
         <ul>
