--- a/certifications.html
+++ b/certifications.html
@@ -295,8 +295,13 @@
 
       <!-- ✅ NEW SECTION ADDED -->
       <div class="cert-section">
-        <h2>Professional Development</h2>
+        <h2>Professional Development &amp; Engagement</h2>
         <ul>
+
+            <li><button class="cert-item" type="button" data-title="Green Infrastructure_Climate_Cities Seminar" data-img="certificates/urban_resilience_planning.png">
+            <strong>Green Infrastructure_Climate_Cities Seminar</strong></button></li>
+
+          
           <li><button class="cert-item" type="button" data-title="Business Communication" data-img="certificates/Business_Communication.png">
             <strong>Business Communication</strong><div class="meta">British Council</div></button></li>
 
