--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
       <div class="hero-left">
         <h1>Musfiqur Rahman</h1>
         <p class="subtitle">
-          PhD Researcher | AI/ML for Stormwater &amp; Green Stormwater Infrastructure (GSI) Performance | Villanova University
+          Doctoral Researcher | AI/ML for Stormwater &amp; Green Stormwater Infrastructure (GSI) Performance | Villanova University
         </p>
 
         <p class="lead">
