--- a/projects.html
+++ b/projects.html
@@ -55,6 +55,11 @@ confusion matrix interpretation, and preparation of the final written report.
 </a>
 </p>
 
+<h3>2D Floodplain Inundation Modeling for a Restored River Reach (HEC-RAS 1D–2D)</h3>
+<p>
+Diagnosed and stabilized a coupled 1D–2D unsteady HEC-RAS model to simulate floodplain inundation along an ~11 km restored reach of the Spree River. Conducted sensitivity analysis and evaluated mitigation strategies (dikes, dredging, Manning’s n) to quantify reductions in flood risk.
+</p>
+
 <h3>Morland Catchment Information System (CIS)</h3>
 <p>
 Developed a catchment-scale decision support tool to explore how land-use change and climate change scenarios
