--- a/projects.html
+++ b/projects.html
@@ -55,7 +55,34 @@ confusion matrix interpretation, and preparation of the final written report.
 </a>
 </p>
 
-<h3>2D Floodplain Inundation Modeling for a Restored River Reach (HEC-RAS 1D–2D)</h3>
+<h3 class="hover-project">
+  2D Floodplain Inundation Modeling for a Restored River Reach (HEC-RAS 1D–2D)
+  <span class="hover-card">
+    <strong>Simulation and Analysis of 2D Flooded Area of River Spree (HEC-RAS 1D–2D Coupled Model)</strong><br>
+    <span style="opacity:0.8;">Technical Report — Brandenburg University of Technology, Cottbus | Dec 14, 2018</span><br><br>
+
+    <strong>Authors:</strong><br>
+    Beza Getnet, Md Abdullah Al Mehedi, Md Zahidul Karim, Monjalina Hoque, <strong>Musfiqur Rahman</strong>, Sheila Ghimire<br><br>
+
+    <strong>Summary:</strong><br>
+    Diagnosed, stabilized and evaluated a coupled 1D channel + 2D floodplain unsteady-flow model in HEC-RAS to assess inundation patterns along an ~11 km restored reach of the Spree River and test flood mitigation strategies.<br><br>
+
+    <strong>What we did:</strong><br>
+    • Built a 1D–2D HEC-RAS unsteady model (1D main channel, 2D floodplain mesh) to simulate flood extent and water surface elevation under multiple scenarios.<br>
+    • Performed sensitivity analysis on computational time step and mesh/grid dimensions and compared impacts on predicted flood depths and inundation patterns.<br>
+    • Evaluated flood mitigation strategies including dike construction, dredging, and roughness (Manning’s n) changes to quantify reductions in floodplain inundation.<br><br>
+
+    <strong>Methods / Tools:</strong><br>
+    HEC-RAS (1D–2D coupling), unsteady flow routing, 2D mesh modeling, scenario analysis, sensitivity analysis, flood-depth comparison across cells.<br><br>
+
+    <strong>Key takeaway:</strong><br>
+    Model results showed sensitivity to time step and roughness and demonstrated that mitigation measures can significantly reduce inundation, while highlighting tradeoffs with ecological goals in renaturation projects.<br><br>
+
+    <strong>Tags:</strong><br>
+    HEC-RAS · 1D–2D Coupling · Flood Inundation · Hydraulic Modeling · Sensitivity Analysis · River Restoration · Flood Mitigation
+  </span>
+</h3>
+
 <p>
 Diagnosed and stabilized a coupled 1D–2D unsteady HEC-RAS model to simulate floodplain inundation along an ~11 km restored reach of the Spree River. Conducted sensitivity analysis and evaluated mitigation strategies (dikes, dredging, Manning’s n) to quantify reductions in flood risk.
 </p>
