--- a/projects.html
+++ b/projects.html
@@ -78,6 +78,13 @@ confusion matrix interpretation, and preparation of the final written report.
     <strong>Key takeaway:</strong><br>
     Model results showed sensitivity to time step and roughness and demonstrated that mitigation measures can significantly reduce inundation, while highlighting tradeoffs with ecological goals in renaturation projects.<br><br>
 
+    <br><br>
+    <strong>Report:</strong><br>
+    <a href="projects/spree_floodplain_2D_HECRAS_report.pdf" target="_blank">
+      📄 View Technical Report (PDF)
+    </a>
+
+    
     <strong>Tags:</strong><br>
     HEC-RAS · 1D–2D Coupling · Flood Inundation · Hydraulic Modeling · Sensitivity Analysis · River Restoration · Flood Mitigation
   </span>
