--- a/projects.html
+++ b/projects.html
@@ -88,7 +88,7 @@ confusion matrix interpretation, and preparation of the final written report.
 Diagnosed and stabilized a coupled 1D–2D unsteady HEC-RAS model to simulate floodplain inundation along an ~11 km restored reach of the Spree River. Conducted sensitivity analysis and evaluated mitigation strategies (dikes, dredging, Manning’s n) to quantify reductions in flood risk.
 </p>
 <p>
-    <strong>Report:</strong><br>
+    <strong>Report:</strong>
     <a href="projects/spree_floodplain_2D_HECRAS_report.pdf" target="_blank">
       📄 View Technical Report (PDF)
     </a>
