--- a/projects.html
+++ b/projects.html
@@ -36,24 +36,41 @@ Integrated inspection data, land cover, and social vulnerability indicators to e
 infrastructure performance risk at the city scale.
 </p>
 
-<h3>Advanced Machine Learning Vision Project</h3>
+<h3 class="hover-project">
+  Advanced Machine Learning Vision Project
+  <span class="hover-card">
+    <strong>Advanced Machine Learning Vision Project</strong><br>
+    <span style="opacity:0.8;">Graduate Course Project — ECE 8487: Advanced Machine Learning | Villanova University</span><br><br>
+
+    <strong>Summary:</strong><br>
+    Designed, trained, and compared deep learning vision models (CNNs and Vision Transformer) for a computer-vision classification task, with emphasis on evaluation and deployment-oriented integration. Implemented the ViT pipeline and conducted performance analysis using metrics and confusion matrices to support the final report and presentation.<br><br>
+
+
+    <strong>Recognition:</strong><br>
+    Ranked <strong>1st</strong> among course projects (ECE 8487). ⭐<br><br>
+    
+    <strong>My contributions:</strong><br>
+    • Implemented a Vision Transformer (ViT) model and training workflow.<br>
+    • Evaluated models using classification metrics and confusion matrices; interpreted failure modes.<br>
+    • Contributed to final analysis, written report, and presentation materials.<br><br>
+
+    <strong>Tools:</strong><br>
+    Python · PyTorch · Jupyter Notebooks · Computer Vision · Model Evaluation<br><br>
+
+    <strong>Notes:</strong><br>
+    • Pretrained weights (.pth) are not included due to file-size limits (available upon request).<br>
+    • This was a collaborative graduate-level course project.
+  </span>
+</h3>
+
 <p>
-Graduate-level group project completed as part of <strong>ECE 8487: Advanced Machine Learning</strong> at Villanova University.
-The project involved designing and evaluating deep learning models, including a Vision Transformer (ViT),
-and integrating trained models into an application framework.
+  <a href="https://github.com/MusfiqurRahman/advanced-ml-vision-project"
+     target="_blank"
+     rel="noopener">
+    GitHub Repository
+  </a>
 </p>
-<p>
-<strong>My contributions:</strong> Vision Transformer (ViT) model implementation, model evaluation and metrics analysis,
-confusion matrix interpretation, and preparation of the final written report.
-</p>
-<p>
-<em>Note: This was a collaborative graduate course project.</em>
-</p>
-<p>
-<a href="https://github.com/MusfiqurRahman/advanced-ml-vision-project" target="_blank">
-  GitHub Repository
-</a>
-</p>
+
 
 <h3 class="hover-project">
   2D Floodplain Inundation Modeling for a Restored River Reach (HEC-RAS 1D–2D)
