--- a/projects.html
+++ b/projects.html
@@ -64,6 +64,10 @@ infrastructure performance risk at the city scale.
 </h3>
 
 <p>
+Designed, trained, and evaluated deep learning computer vision models, including convolutional neural networks and Vision Transformers, for a real-world classification task. Emphasized rigorous performance evaluation using classification metrics and confusion matrices, and integrated trained models into an application-oriented workflow.
+</p>
+  
+<p>
   <a href="https://github.com/MusfiqurRahman/advanced-ml-vision-project"
      target="_blank"
      rel="noopener">
