--- a/certifications.html
+++ b/certifications.html
@@ -301,6 +301,20 @@
             <li><button class="cert-item" type="button" data-title="Green Infrastructure_Climate_Cities Seminar" data-img="certificates/urban_resilience_planning.png">
             <strong>Green Infrastructure_Climate_Cities Seminar</strong></button></li>
 
+    <li>
+      <button class="cert-item" type="button"
+        data-title="Environmental Modeling & ESIA (Resource Person / Trainer)"
+        data-img="certificates/certificate_of_appreciation.png">
+
+        <strong>Environmental Modeling & ESIA</strong>
+        <div class="meta">
+          Institute of Water Modelling (IWM)<br>
+          <span class="role">Resource Person / Trainer</span> — Certificate of Appreciation
+        </div>
+
+      </button>
+    </li>
+
           
           <li><button class="cert-item" type="button" data-title="Business Communication" data-img="certificates/Business_Communication.png">
             <strong>Business Communication</strong><div class="meta">British Council</div></button></li>
