--- a/certifications.html
+++ b/certifications.html
@@ -286,7 +286,7 @@
 </header>
 
 <div class="cert-container">
-  <h1 style="text-align:center;">Certifications &amp; Specialized Training</h1>
+  <h1 style="text-align:center;">Certifications, Awards &amp; Specialized Training</h1>
 
   <div class="cert-grid">
 
