--- a/certifications.html
+++ b/certifications.html
@@ -381,6 +381,28 @@
 
           <li><button class="cert-item" type="button" data-title="Data Science" data-img="certificates/data_science.png">
             <strong>Data Science with Python (Beginner to Advanced)</strong><div class="meta">NOAMI</div></button></li>
+
+              <!-- NOAMI Certificate -->
+    <li>
+      <button class="cert-item" type="button"
+        data-title="Numerical Modeling & Artificial Intelligence for Ocean Science"
+        data-img="certificates/Numerical_Model_AI.png">
+        <strong>Numerical Modeling & Artificial Intelligence for Ocean Science</strong>
+        <div class="meta">National Oceanographic and Maritime Institute (NOAMI) · 32-hour training</div>
+      </button>
+    </li>
+
+    <!-- Australian Water School Certificate -->
+    <li>
+      <button class="cert-item" type="button"
+        data-title="AI Tools for Flood Modeling"
+        data-img="certificates/AI_tools_flooding.png">
+        <strong>AI Tools for Flood Modeling</strong>
+        <div class="meta">Australian Water School · Professional Webinar</div>
+      </button>
+    </li>
+
+         
         </ul>
       </div>
 
