--- a/index.html
+++ b/index.html
@@ -329,28 +329,22 @@
 
   <!-- IMPACT -->
   <section class="section">
-    <h2>Research Impact &amp; Applications</h2>
+    <h2>National Impact &amp; Applications</h2>
     <div class="impact-box">
       <ul>
         <li>
-          <strong>Urban flood resilience (U.S.-focused, globally informed):</strong>
-          Develops data-driven frameworks to support proactive screening, maintenance prioritization, and performance forecasting
-          for stormwater and green stormwater infrastructure (GSI) systems in U.S. cities, informed by applied experience in
-          flood-prone urban environments.
+          <strong>Urban flood resilience:</strong>
+          Develops data-driven frameworks to support proactive screening, maintenance prioritization, and performance forecasting for stormwater and green stormwater infrastructure (GSI) systems across U.S. municipalities, informed by applied experience in flood-prone urban environments.
         </li>
 
         <li>
           <strong>Decision-relevant modeling and analytics:</strong>
-          Integrates monitoring data, hydrologic and hydraulic modeling (e.g., SWMM, HEC-RAS), and machine learning to generate
-          defensible, actionable insights that support municipal stormwater planning, risk classification, and infrastructure
-          management.
+          Integrates monitoring data, hydrologic and hydraulic modeling (e.g., SWMM, HEC-RAS), and machine learning to produce defensible, actionable outputs that support municipal stormwater planning, risk classification, and infrastructure management.
         </li>
 
         <li>
           <strong>Scalable and transferable methods:</strong>
-          Designs approaches that generalize across municipalities by incorporating environmental context (land cover and land use)
-          and community vulnerability indicators, drawing on professional experience from large-scale government water and flood
-          management projects in Bangladesh to inform robust, real-world implementation.
+          Designs approaches that generalize across jurisdictions by incorporating environmental context (land cover and land use) and community vulnerability indicators, drawing on large-scale government flood and water management experience to inform robust, real-world implementation.
         </li>
       </ul>
     </div>
