--- a/certifications.html
+++ b/certifications.html
@@ -410,7 +410,7 @@
         <h2>Hydrologic, Stormwater & Flood Modeling</h2>
         <ul>
           <li><button class="cert-item" type="button" data-title="Urban Drainage Modeling" data-img="certificates/urban_drainage.png">
-            <strong>Hydrologic & Stormwater Modeling (EPA SWMM)</strong></button></li>
+            <strong>Hydrologic & Stormwater Modeling</strong></button></li>
 
           <li><button class="cert-item" type="button" data-title="Urban Flooding" data-img="certificates/urban_flooding.png">
             <strong>Integrated Urban Flood Modeling</strong></button></li>
